kde-workspace (4:4.7.2-0r0) UNRELEASED; urgency=low

  * New upstream release.

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.7.2.
  * Bump kdelibs5-dev build dependency to 4:4.7.
  * Bump kdepimlibs5-dev build dependency to 4:4.7.
  * Change the source package name from kdebase-workspace to kde-workspace in
    order to match upstream naming.
  * Update patches:
    - Import plasma_desktop_shell_drop_kactivities.diff from Ubuntu.
    - Remove backport_kwin_multihead_improvements.diff, applied usptream.
    - Remove ksmserver_fadeeffect_use_sse2_free.diff, applied upstream.
    - Remove kwin_avoid_deep_vector_copies.diff, applied upstream.
    - Refreshed various patches to make them apply without offsets.
  * Update build dependencies:
    - Add libgles2-mesa-dev.
    - Add libprison-dev.
    - Replace libpng-dev build depend with libpng12-dev to avoid accidental
      builds against libpng packages in experimental.
  * Update installed files.
  * Bump sonames due to binary incompatible changes:
    - libkwineffects1abi1 -> libkwineffects1abi2
    - libplasmaclock4abi1 -> libplasmaclock4abi2
    - libsolidcontrol4abi1 -> libsolidcontrol4abi2
    - libsolidcontrolifaces4abi1 -> libsolidcontrolifaces4abi2
    - libtaskmanager4abi1 -> libtaskmanager4abi2
  * kdebase-workspace-data Breaks/Replaces kde-icons-mono (<< 4:4.6.80).

  [ Sune Vuorela ]
  * Remove libdmtx-dev, not used directly (but thru libprison)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 24 Sep 2011 20:37:44 +0200

kdebase-workspace (4:4.6.5-3) unstable; urgency=low

  [ Pino Toscano ]
  * Disable the NetworkManager-related files, as they are not compiled with
    NM >= 0.9. (Closes: #640393)
  * Bump the libnm-util-dev and network-manager-dev build dependencies to 0.9,
    to be sure to not use an older NM version.

  [ José Manuel Santamaría Lema ]
  * Add kwin_avoid_deep_vector_copies.diff to improve kwin performance.
